finalized homepage etc

--- a/app/contact.html
+++ b/app/contact.html
@@ -38,49 +38,77 @@
 
 
     <div class="row small-padding">
-      <div class="columns large-4">
+      <div class="columns medium-12 large-4">
 
         <div class="row">
-          <div class="columns large-12">
-            <div class="note-teaser">
-              <h3>General Business</h3>
-              <p><a>contact@albatrossdigital.com</a></p>
+          <div class="columns medium-6 large-12">
+
+            <div class="row">
+              <div class="columns large-12">
+                <div class="note-teaser">
+                  <h5>General Business</h5>
+                  <p><a>contact@albatrossdigital.com</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="columns medium-6 large-12">
+
+            <div class="row">
+              <div class="columns large-12">
+                <div class="note-teaser">
+                  <h5>Project Inquiries</h5>
+                  <p><a>kevin@albatrossdigital.com</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns medium-6 large-12">
+
+            <div class="row">
+              <div class="columns large-12">
+                <div class="note-teaser">
+                  <h5>AD East</h5>
+                  <p><a>155 Water Street<br>Brooklyn, NY 11201</a><br><a>(917) 873 4666</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="columns medium-6 large-12">
+
+            <div class="row">
+              <div class="columns large-12">
+                <div class="note-teaser">
+                  <h5>AD West</h5>
+                  <p><a>101 Broadway<br>Suite 305<br>Oakland, CA 94607</a></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="row">
           <div class="columns large-12">
-            <div class="note-teaser">
-              <h3>Project Inquiries</h3>
-              <p><a>kevin@albatrossdigital.com</a></p>
-            </div>
-          </div>
-        </div>
 
-        <div class="row">
-          <div class="columns large-12">
-            <div class="note-teaser">
-              <h3>AD East</h3>
-              <p><a>155 Water Street<br>Brooklyn, NY 11201</a><br><a>(917) 873 4666</a></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="note-teaser">
-              <h3>AD West</h3>
-              <p><a>101 Broadway<br>Suite 305<br>Oakland, CA 94607</a></p>
+            <div class="row">
+              <div class="columns large-12">
+                <div class="note-teaser social-net">
+                  <p><a>&spades;</a>&emsp;&emsp;<a>&clubs;</a>&emsp;&emsp;<a>&hearts;</a></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
       </div>
-      <div class="columns large-8">
+      <div class="columns medium-12 large-8">
 
         <div class="row">
-          <div class="columns large-12">
+          <div class="columns large-12 small-padding">
             <img src="images/sign.jpg">
           </div>
         </div>
