--- a/app/notes.html
+++ b/app/notes.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="columns medium-10 large-8 end">
+      <div class="columns large-12">
         <h2><a>All +</a></h2>
       </div>
     </div>
@@ -49,7 +49,7 @@
             <div class="note-teaser">
               <div class="row">
                 <div class="columns large-10 end">
-                  <h3><a href="/about.html">Flight: Our Open-Source Drupal Distribution</a></h3>
+                  <h3><a href="/note.html">Flight: Our Open-Source Drupal Distribution</a></h3>
                   <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules...</p>
                 </div>
               </div>
@@ -166,7 +166,7 @@
             <h5>Contact</h5>
           </div>
           <div class="columns small-12 large-8">
-            <p>(917) 873 4666<br><a>hello@albatrossdigital.com</a></p>
+            <p>(917) 873 4666<br><a>contact@albatrossdigital.com</a></p>
           </div>
         </div>
       </div>
