--- a/app/page.html
+++ b/app/page.html
@@ -36,12 +36,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="columns medium-10 large-8 end">
+      <div class="columns large-12">
         <h2>100 Years of Excellence</h2>
       </div>
     </div>
          
-    <div class="row medium-padding">
+    <div class="row small-padding">
       <div class="columns large-12">
         <p>For over one hundred years, the Virginia Law Review has been one of the most prestigious publications of the legal profession. In 2013, they challenged us to build a new digital home for their vast collection of scholarly notes and articles.</p>
       </div>
@@ -59,7 +59,7 @@
     
 
     <div class="row">
-      <div class="columns large-8 large-padding">
+      <div class="columns large-12 medium-padding">
         <h3>Visual Design</h3>
         <p>Inspired by print editions of the Review, we created a design rooted in typography. Users can easily view the latest volume or navigate through the archives to find interesting takes from students and professionals. Our print edition theme reflects the tradition and character of the organization, and the functionality behind it positions the Law Review as a leader in its field.</p>
       </div>
@@ -116,7 +116,7 @@
         <div class="row">
           <div class="columns large-12">
             <div class="all-teaser">
-                <h3><a>&ndash; All Projects</a></h3>
+                <h3><a>All Projects</a></h3>
             </div>
           </div>
         </div>
