--- a/app/projects.html
+++ b/app/projects.html
@@ -36,83 +36,83 @@
       </div>
     </div>
     <div class="row">
-      <div class="columns medium-10 large-8 end">
+      <div class="columns large-12">
         <h2><a>All +</a></h2>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns medium-6 large-6">
+      <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Baltimore</a></h3>
       </div>
-       <div class="columns medium-6 large-6">
+       <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Blue Guide</a></h3>
       </div>
     </div>
      
     <div class="row">
-      <div class="columns medium-6 large-6">
+      <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">CoveredU</a></h3>
       </div>
-       <div class="columns medium-6 large-6">
+       <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Charities.org</a></h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns medium-6 large-6">
+      <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">DC Library</a></h3>
       </div>
-       <div class="columns medium-6 large-6">
+       <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Logos & Marks</a></h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns medium-6 large-6">
+      <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Net Impact</a></h3>
       </div>
-       <div class="columns medium-6 large-6">
+       <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Owwl.org</a></h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns medium-6 large-6">
+      <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Port of Tacoma</a></h3>
       </div>
-       <div class="columns medium-6 large-6">
+       <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Rockcorps</a></h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns medium-6 large-6">
+      <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">STEMZone</a></h3>
       </div>
-       <div class="columns medium-6 large-6">
+       <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">UC Davis</a></h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns medium-6 large-6">
+      <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Virginia Law Review</a></h3>
       </div>
-       <div class="columns medium-6 large-6">
+       <div class="columns medium-12 large-6">
         <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Worst Landlords</a></h3>
       </div>
