--- a/app/tacoma.html
+++ b/app/tacoma.html
@@ -44,7 +44,7 @@
     
 
     <div class="row">
-      <div class="columns large-12 medium-padding">
+      <div class="columns large-12 small-padding">
          <p>The Port of Tacoma is the third-largest port on the West Coast of the United States, and growing quickly. We were brought in to redesign the entire site and develop a host of interactive features to showcase Tacoma's many strategic advantages.</p>
       </div>
     </div>
@@ -52,13 +52,14 @@
     <div class="row">
       <div class="columns large-12 medium-padding">
         <img src="images/tacoma1.jpg">
+        <h5 class="caption-small">Photo by <a>seabirdnz</a></h5>
       </div>
     </div>
  
 
 
      <div class="row">
-      <div class="columns large-12 large-padding">
+      <div class="columns large-12 medium-padding">
         <h3>Challenge</h3>
         <p>The old site had become bloated with content, which made finding information difficult for potential and current clients. The Port needed a modern, responsive website that highlighted their friendly, professional attitude and key competitve advantages.</p>
         <h3>Interactive Features</h3>
