--- a/app/about.html
+++ b/app/about.html
@@ -29,20 +29,14 @@
     </div>
 
     <div class="row">
-      <div class="columns large-12">
+      <div class="columns large-12 small-padding">
         <h1>About</h1>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns large-12">
-        <h2>Design &amp; Development</h2>
-      </div>
-    </div>
-         
-    <div class="row">
-      <div class="columns medium-12 large-12 medium-padding">
-        <p>Albatross Digital is an independent design and development company. We build websites, design identities and solve problems for our clients. Our work helps organizations, institutions and entrepreneurs acheive their visions.</p>
+      <div class="columns large-12 medium-padding">
+        <h3>Albatross Digital is an independent design and development company. We build websites, design identities and solve problems for organizations, institutions and entrepreneurs.</h3>
       </div>
     </div>
 
@@ -80,10 +74,10 @@
 
         <div class="row">
           <div class="columns large-12 medium-padding">
-            <h2>&mdash; Create Clarity</h2>
-            <h2>&mdash; Design Systems</h2>
-            <h2>&mdash; Build for All</h2>
-            <h2>&mdash; Always Learn</h2>
+            <h2>&mdash;Create Clarity</h2>
+            <h2>&mdash;Design Systems</h2>
+            <h2>&mdash;Build for All</h2>
+            <h2>&mdash;Always Learn</h2>
           </div>
         </div>
 
@@ -143,7 +137,7 @@
                   <img src="images/kevin.png">
                 </div>
                 <div class="columns medium-8 large-8">
-                  <h3 class="no-margin">Kevin Herman</h3>
+                  <h3><a>Kevin Herman</a></h3>
                   <h5>Business Director</h5>
                   <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
                 </div>
@@ -157,7 +151,7 @@
                   <img src="images/kevin.png">
                 </div>
                 <div class="columns medium-8 large-8">
-                  <h3 class="no-margin">Jeff Lyon</h3>
+                  <h3><a>Jeff Lyon</a></h3>
                   <h5>Developer</h5>
                   <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
                 </div>
@@ -174,7 +168,7 @@
                   <img src="images/kevin.png">
                 </div>
                 <div class="columns medium-8 large-8">
-                  <h3 class="no-margin">Shawn Maloney</h3>
+                  <h3><a>Shawn Maloney</a></h3>
                   <h5>Designer</h5>
                   <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
                 </div>
@@ -188,7 +182,7 @@
                   <img src="images/kevin.png">
                 </div>
                 <div class="columns medium-8 large-8">
-                  <h3 class="no-margin">Alex Schmoe</h3>
+                  <h3><a>Alex Schmoe</a></h3>
                   <h5>Developer</h5>
                   <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
                 </div>
@@ -212,9 +206,10 @@
         <div class="row">
           <div class="columns large-6 small-padding">
             <img src="images/tross1.jpg">
+            <h5 class="caption-small">Photo by <a href="https://www.flickr.com/photos/seabirdnz/10372922925/in/set-72157636739223795">seabirdnz</a></h5>
           </div>
           <div class="columns large-6">
-            <p>&ldquo;An albatross is the grandest living flying machine on Earth. An albatross is bone, feathers, muscle, and the wind... A parent albatross may fly more than 10,000 miles (16,000 kilometers) to deliver one meal to its chick. Wielding the longest wings in nature&mdash;up to eleven and a half feet (3.5 meters)&mdash;albatrosses can glide hundreds of miles without flapping, crossing ocean basins, circumnavigating the globe.&rdquo;
+            <p>&ldquo;An albatross is the grandest living flying machine on Earth. An albatross is bone, feathers, muscle, and the wind... Wielding the longest wings in nature&mdash;up to eleven and a half feet (3.5 meters)&mdash;albatrosses can glide hundreds of miles without flapping, crossing ocean basins, circumnavigating the globe.&rdquo;
             <p>&ndash; Carl Safina, <i><a>On the Wings of the Albatross</a></i></p>
           </div>
         </div>
