--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,8 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body>
+  <body class="full-bg">
+
     <div class="row">
       <div class="columns small-4 large-6">
         <a href="#"><img class="logo" src="images/logo.svg"></a>
@@ -27,49 +28,136 @@
       </div>
     </div>
 
-    <div class="row large-padding">
-      <div class="columns large-10">
-        <h1 class="wordmark"><a>Albatross<br>Digital</a></h1>
+    <div class="row">
+      <div class="columns large-12">
+        <h1 class="wordmark"><a>Albatross Digital</a></h1>
       </div>
     </div>
 
     <div class="row">
-      <div class="columns medium-12 large-10">
-        <p>Project</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns medium-12 large-10">
-        <h1>Project</h1>
+      <div class="columns large-12 medium-padding">
+        <h2>We build websites, design identities and solve problems.</h2>
       </div>
     </div>
 
 
-
-
-
-    <div class="row footer">
-
-      <div class="columns small-12 large-6">
-        <p>Albatross Digital<br>Design &amp; Development</p>
-      </div>
-
-      <div class="columns small-12 large-6">
+    <div class="row medium-padding">
+      <div class="columns medium-6 large-6">
 
         <div class="row">
-          <div class="columns small-12 large-4">
-            <h5>Contact</h5>
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-12">
+                  <h3><a>Projects</a></h3>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="columns small-12 large-8">
-            <p>(917) 873 4666<br><a>hello@albatrossdigital.com</a></p>
+        </div>
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-10 end">
+                  <h3><a>About</a></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="columns medium-6 large-6">
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-12">
+                  <h3><a>Notes</a></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-10 end">
+                  <h3><a>Contact</a></h3>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-         
 
 
+
+
+
+    <!-- menu
+    <div class="row medium-padding">
+      <div class="columns medium-6 large-6">
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-12">
+                  <h3><a>Projects</a></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-12">
+                  <h3><a>Notes</a></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+       <div class="columns medium-6 large-6">
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-12">
+                  <h3><a>About</a></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-12">
+                  <h3><a>Contact</a></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+        
 
 
 
